--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -93,7 +93,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macos-14, macos-14-large]
+        os: [windows-latest, macos-15, macos-15-large]
     defaults:
       run:
         shell: bash
@@ -126,7 +126,7 @@ jobs:
           echo "C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools" >> $GITHUB_PATH 
           echo "C:\Program Files\DigiCert\DigiCert One Signing Manager Tools" >> $GITHUB_PATH 
         shell: bash             
-  
+
       - name: Setup SSM KSP on windows latest
         if: runner.os == 'Windows'
         run: | 
@@ -145,11 +145,15 @@ jobs:
         run: |
             make build-agent-runner
 
+
       - name: sign the file mac os
         if: runner.os != 'Windows'
         env:
           CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
           CSC_LINK: ${{ secrets.CSC_LINK }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}  # Apple ID email
+          APPLE_ID_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}  # App-specific password
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}  # Team ID из Apple Dev Account
         run: | 
           echo "$CSC_LINK" | base64 --decode > certificate.p12
 
@@ -162,18 +166,20 @@ jobs:
           codesign --force --verbose --sign "Developer ID Application" --timestamp --options runtime dist/agent_runner_bin
 
           codesign -dv --verbose=4 dist/agent_runner_bin
+    
       - name: rename the file mac os
         if: runner.os != 'Windows'
         run: | 
           export FILENAME=`echo -n agent_runner_${{runner.os}}_${{runner.arch}}|tr '[:upper:]' '[:lower:]'`
           echo "FILENAME=$FILENAME" >> $GITHUB_ENV; 
           mv dist/agent_runner_bin dist/${FILENAME}
+          dist/${FILENAME} --version
 
       - name: sign the file
         if: runner.os == 'Windows'
         run: | 
           "C:\\Program Files\\DigiCert\\DigiCert One Signing Manager Tools\\smctl.exe" sign --keypair-alias=${{ secrets.SM_KEY_PAIR_ALIAS }} --input "dist/agent_runner_bin.exe"
-  
+
       - name: rename the file windows
         if: runner.os == 'Windows'
         run: | 
